paper_experimental_results/2026-05-10T00-24-35/grok-code-fast-1/conversions/bool_char_int_c3/sample_004/target.compile.log
error[E0310]: the parameter type `T` may not live long enough
 --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/conversions/bool_char_int_c3/sample_004/target.rs:2:8
  |
2 |     if std::any::TypeId::of::<T>() == std::any::TypeId::of::<i32>() {
  |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |        |
  |        the parameter type `T` must be valid for the static lifetime...
  |        ...so that the type `T` will meet its required lifetime bounds
  |
help: consider adding an explicit lifetime bound
  |
1 | fn type_id_of<T: 'static>() -> i32 {
  |                +++++++++

error[E0310]: the parameter type `T` may not live long enough
 --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/conversions/bool_char_int_c3/sample_004/target.rs:4:15
  |
4 |     } else if std::any::TypeId::of::<T>() == std::any::TypeId::of::<u32>() {
  |               ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |               |
  |               the parameter type `T` must be valid for the static lifetime...
  |               ...so that the type `T` will meet its required lifetime bounds
  |
help: consider adding an explicit lifetime bound
  |
1 | fn type_id_of<T: 'static>() -> i32 {
  |                +++++++++

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0310`.